27/03 - Implemented the footer section in the webpage

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,15 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Branc Name</title>
+    <link rel="stylesheet" href="../css/footer.css">
+    <title>Branch Name</title>
 </head>
+
 <body>
-        <header></header>
-        <nav></nav>
-        <main></main>
-        <footer></footer>
+    <header></header>
+    <nav></nav>
+    <main></main>
+    <footer>
+        <div class="container">
+            <div class="col1">
+                <div class="row">
+                    <h3>Address</h3>
+                    44 Valley Woods Road, <br>
+                    North york, Toronto, <br>
+                    M3A 2R6
+                </div>
+                <div class="row">
+                    <h3> Call Us </h3>
+                    <a href="tel:+14374258045">+1 437 425 8045</a>
+                </div>
+                <div class="row">
+                    <h3> Mail Us </h3>
+                    <a href="mailto:brandname@example.com">brandname@example.com</a>
+                </div>
+            </div>
+            <div class="col2">
+                <h3 class = "hours"> Business Hours </h3>
+                <table>
+                    <tr>
+                      <td>Monday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Tuesday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Wednesday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Thursday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Friday</td>
+                      <td>9:00 AM</td>
+                      <td> - 5:00 PM</td>
+                    </tr>
+                    <tr>
+                      <td>Saturday</td>
+                      <td>Closed</td>
+                    </tr>
+                    <tr>
+                      <td>Sunday</td>
+                      <td>Closed</td>
+                    </tr>
+                  </table>
+            </div>
+            <div class="col3">
+                <iframe
+                    src="https://www.google.ca/maps/place/44+Valley+Woods+Rd,+North+York,+ON+M3A+2R6/@43.7547867,-79.3357049,17z/data=!3m1!4b1!4m6!3m5!1s0x89d4d27dc65e142f:0x486009f6c2256cff!8m2!3d43.7547867!4d-79.3335162!16s%2Fg%2F11b8zhmr8y"
+                    width="300" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+        </div>
+        <p class="copyright">Copyright &copy; 2023 brandname | All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
