--- a/html/index.html
+++ b/html/index.html
@@ -4,12 +4,170 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/services.css">
+    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/home.css">
     <title>Branc Name</title>
 </head>
 <body>
         <header></header>
         <nav></nav>
-        <main></main>
+        <main>
+            <div class="blue content-padding">
+                <h1 class="heading">The Most Reliable Web Design and Development Services In Toronto</h1>
+                <p class="heading-text">
+                    We can deliver and develop websites and mobile applications as per your needs.
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
+                </p>
+            </div>
+            <div>
+                <div class="card-container content-padding">
+                    <div class="inner-box">
+                        <img src="../img/team2.jpg" alt="Team">
+                    </div>
+                    <div class="inner-box">
+                        <h2>
+                            Who are we?
+                        </h2>
+                        <h2>
+                            A Team of Full Stack Software Developers
+                            with work experience in various 
+                            organizations from startups to MNC’s
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                            ex ea commodo consequat. Duis aute irure 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="content-padding">
+                <h1 class="sub-heading">Our Services</h1>
+                <div class="card-container">
+                    <div class="card">
+                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                        <p class="svc-name">
+                            UI & UX
+                        </p>
+                        <p class="svc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                        <p class="svc-name">
+                            UI & UX
+                        </p>
+                        <p class="svc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                        <p class="svc-name">
+                            UI & UX
+                        </p>
+                        <p class="svc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                    </div>
+                </div>
+                <div class="btm-container">
+                    <button>
+                        See all services
+                    </button>
+                </div>
+            </div>
+            <div class="content-padding blue">
+                <h1 class="sub-heading white">Our Portfolio</h1>
+                <div class="card-container img-link">
+                    <img src="../img/team2.jpg" alt="Team">
+                    <img src="../img/team2.jpg" alt="Team">
+                    <img src="../img/team2.jpg" alt="Team">
+                    <img src="../img/team2.jpg" alt="Team">
+                    <img src="../img/team2.jpg" alt="Team">
+                    <img src="../img/team2.jpg" alt="Team">
+                </div>
+            </div>
+            <div class="content-padding">
+                <h1 class="sub-heading">Reviews</h1>
+                <div class="card-container">
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                        </div>
+                        <p class="review">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                        <p class="reviewer">
+                            Jay, Google
+                        </p>
+                    </div>
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                        </div>
+                        <p class="review">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                        <p class="reviewer">
+                            Jay, Google
+                        </p>
+                    </div>
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                            <img class="star" src="../img/star.jpg" alt="Rating">
+                        </div>
+                        <p class="review">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                        <p class="reviewer">
+                            Jay, Google
+                        </p>
+                    </div>
+                </div>
+                <div class="btm-container">
+                    <button>
+                        Know more about us
+                    </button>
+                </div>
+            </div>
+            <div class="banner">
+                <p>Got any questions?</p>
+                <button>
+                    Contact us
+                </button>
+            </div>
+        </main>
         <footer></footer>
 </body>
 </html>
