--- a/html/services.html
+++ b/html/services.html
@@ -4,12 +4,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/services.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Branc Name</title>
 </head>
 <body>
         <header></header>
         <nav></nav>
-        <main></main>
+        <main>
+            <div class="blue content-padding">
+                <h1 class="heading">Services</h1>
+                <p class="heading-text">
+                    We can deliver and develop websites and mobile applications as per your needs.
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
+                </p>
+            </div>
+            <div class="content-padding">
+                <h1 class="sub-heading">Our Services</h1>
+                <div class="card-container">
+                    <div class="card">
+                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                        <p class="svc-name">
+                            UI & UX
+                        </p>
+                        <p class="svc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                        <p class="svc-name">
+                            UI & UX
+                        </p>
+                        <p class="svc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                        <p class="svc-name">
+                            UI & UX
+                        </p>
+                        <p class="svc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                        <p class="svc-name">
+                            UI & UX
+                        </p>
+                        <p class="svc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                        <p class="svc-name">
+                            UI & UX
+                        </p>
+                        <p class="svc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img class="svc-img" src="../img/star.jpg" alt="Rating">
+                        <p class="svc-name">
+                            UI & UX
+                        </p>
+                        <p class="svc-text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                            modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                            corporis, unde ea!
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="banner">
+                <p>Got any questions?</p>
+                <button>
+                    Contact us
+                </button>
+            </div>
+        </main>
         <footer></footer>
 </body>
 </html>
