--- a/html/about.html
+++ b/html/about.html
@@ -4,12 +4,173 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/about.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Branc Name</title>
 </head>
 <body>
-        <header></header>
-        <nav></nav>
-        <main></main>
-        <footer></footer>
+    <header></header>
+    <nav></nav>
+    <main>
+        <div class="blue content-padding">
+            <h1 class="heading">About Us</h1>
+            <p class="heading-text">
+                We can deliver and develop websites and mobile applications as per your needs.
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod “
+            </p>
+        </div>
+        <div class="card-container content-padding">
+            <div class="inner-box">
+                <img src="../img/team.jpg" alt="Team">
+            </div>
+            <div class="inner-box">
+                <h2>
+                    Who are we?
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat. Duis aute irure 
+                </p>
+            </div>
+            <div class="inner-box">
+                <h2>
+                    Our Mission
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat. Duis aute irure 
+                </p>
+            </div>
+            <div class="inner-box">
+                <h2>
+                    Why choose us?
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                    ex ea commodo consequat. Duis aute irure 
+                </p>
+            </div>
+        </div>
+        <div class="content-padding">
+            <h1 class="sub-heading">Reviews</h1>
+            <div class="card-container">
+                <div class="card">
+                    <div class="img-container">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                    </div>
+                    <p class="review">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                    <p class="reviewer">
+                        Jay, Google
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                    </div>
+                    <p class="review">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                    <p class="reviewer">
+                        Jay, Google
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                    </div>
+                    <p class="review">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                    <p class="reviewer">
+                        Jay, Google
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                    </div>
+                    <p class="review">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                    <p class="reviewer">
+                        Jay, Google
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                    </div>
+                    <p class="review">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                    <p class="reviewer">
+                        Jay, Google
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="img-container">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                        <img class="star" src="../img/star.jpg" alt="Rating">
+                    </div>
+                    <p class="review">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti molestiae ad iusto, porro natus
+                        modi placeat illo nostrum eaque nihil facilis voluptates nobis explicabo minus amet dolorem, 
+                        corporis, unde ea!
+                    </p>
+                    <p class="reviewer">
+                        Jay, Google
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="banner">
+            <p>Got any questions?</p>
+            <button>
+                Contact us
+            </button>
+        </div>
+    </main>
+    <footer></footer>   
 </body>
 </html>
